commented out base url

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ github_repo: "tenacious-blog"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
-url: "https://tadtenacious.github.io/tenacious-blog" # the base hostname & protocol for your site, e.g. http://example.com
+#url: "https://tadtenacious.github.io/tenacious-blog" # the base hostname & protocol for your site, e.g. http://example.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
@@ -39,7 +39,7 @@ baseurl: "" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: tadtenacious
+    twitter: TadTenacious
     github: tadtenacious
 
 # Set this to true to get LaTeX math equation support
